--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -3,6 +3,6 @@
 * ISA Specifications
 #** xref:riscv-isa-manual:priv:nav.adoc[Privileged ISA Specification]
 #** xref:riscv-isa-manual:unpriv:nav.adoc[Unprivileged ISA Specification]
-- modules/ROOT/nav.adoc
-- modules/unpriv/nav.adoc
-- modules/priv/nav.adoc
+#- modules/ROOT/nav.adoc
+- xref:riscv-isa-manual:unpriv:nav.adoc
+- xref:riscv0isa0manual:priv:nav.adoc
