--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -1,5 +1,5 @@
 * Home
 ** xref:riscv-library:ROOT:index.adoc[]
 * ISA Specifications
-** xref:riscv-isa-manual:priv:nav.adoc[Privileged ISA Specification]
-** xref:riscv-isa-manual:unpriv:nav.adoc[Unprivileged ISA Specification]
+** xref:isa:priv:nav.adoc[Privileged ISA Specification]
+** xref:isa:unpriv:nav.adoc[Unprivileged ISA Specification]
