--- a/nav.adoc
+++ b/nav.adoc
@@ -5,14 +5,14 @@
 ** [Privileged ISA Specification]
 *** xref::priv-intro.adoc[Introduction]
 *** xref:1@isa:priv::priv-csrs.adoc[Control and Status Registers (CSRs)]
-*** xref:machine.adoc[Machine-Level ISA, Version 1.13]
-*** xref:indirect-csr.adoc["Smcsrind/Sscsrind" Indirect CSR Access, version 1.0]
-*** xref:smcntrpmf.adoc["Smcntrpmf" Cycke and Instret Privilege Mode Filtering, Version 1.0]
-*** xref:rnmi.adoc["Smrnmi" Extension for Resumable Non-Maskable Interrupts, Version 1.0]
-*** xref:smcdeleg.adoc["Smcdeleg" Counter Delegation Extension, Version 1.0]
-*** xref:hypervisor.adoc["H" Extension for Hypervisor Support, Version 1.0]
-*** xref:priv-cfi.adoc[Control-flow Integrity(CFI)]
-*** xref:priv-insns.adoc[RISC-V Privileged Instruction Set Listings]
-*** xref:priv-history.adoc[History]
-*** xref:bibliography.adoc[Bibliography]
+//*** xref:machine.adoc[Machine-Level ISA, Version 1.13]
+//*** xref:indirect-csr.adoc["Smcsrind/Sscsrind" Indirect CSR Access, version 1.0]
+//*** xref:smcntrpmf.adoc["Smcntrpmf" Cycke and Instret Privilege Mode Filtering, Version 1.0]
+//*** xref:rnmi.adoc["Smrnmi" Extension for Resumable Non-Maskable Interrupts, Version 1.0]
+//*** xref:smcdeleg.adoc["Smcdeleg" Counter Delegation Extension, Version 1.0]
+//*** xref:hypervisor.adoc["H" Extension for Hypervisor Support, Version 1.0]
+//*** xref:priv-cfi.adoc[Control-flow Integrity(CFI)]
+//*** xref:priv-insns.adoc[RISC-V Privileged Instruction Set Listings]
+//*** xref:priv-history.adoc[History]
+//*** xref:bibliography.adoc[Bibliography]
 ** xref:isa:unpriv::nav.adoc[Unprivileged ISA Specification]
