Remove ISA Specs entry

--- a/nav.adoc
+++ b/nav.adoc
@@ -1,10 +1,10 @@
 .Home
 ** xref:ROOT:index.adoc[]
 
-.ISA Specifications
-..Privileged ISA Specification
-*** xref:isa:priv-intro.adoc[Introduction]
-*** xref:isa:priv::priv-csrs.adoc[Control and Status Registers (CSRs)]
+//.ISA Specifications
+//..Privileged ISA Specification
+//*** xref:isa:priv-intro.adoc[Introduction]
+//*** xref:isa:priv::priv-csrs.adoc[Control and Status Registers (CSRs)]
 //*** xref:machine.adoc[Machine-Level ISA, Version 1.13]
 //*** xref:indirect-csr.adoc["Smcsrind/Sscsrind" Indirect CSR Access, version 1.0]
 //*** xref:smcntrpmf.adoc["Smcntrpmf" Cycke and Instret Privilege Mode Filtering, Version 1.0]
